--- a/yemek-tarifi-case/src/app/globals.css
+++ b/yemek-tarifi-case/src/app/globals.css
@@ -24,3 +24,8 @@ html, body {
   background-color: #F5F3F0; 
   color: #333; 
 }
+
+.login-page, .signup-page {
+  margin-top: 0;
+  padding-top: 0;
+}
